# HammerSystemTestTask

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
account/: admin.py  models.py  repository.py  serializers.py  service.py  task.py  urls.py  utils.py  views.py
account/migrations/: 0001_initial.py
postman/: New Collection.postman_collection.json
project_root/: celery.py  settings.py  urls.py
