[tool.poetry]
name = "hammersystemtesttask"
version = "0.1.0"
description = ""
authors = ["NaiNaniNai <nail02-02@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
